# lm35-cortex-m-gpio

./: README.md
lm35-cortex-m-gpio/: CMakeLists.txt  LICENSE  Makefile  Project-Structure  platformio.ini
lm35-cortex-m-gpio/config/: automatic_config.py  project_config.json
lm35-cortex-m-gpio/inc/: config.h
lm35-cortex-m-gpio/scripts/: build.sh  generate_config.py
lm35-cortex-m-gpio/src/: main.c  system_init.c
lm35-cortex-m-gpio/src/drivers/: gpio_interface.c  gpio_interface.h  lm35_driver.c  lm35_driver.h
lm35-cortex-m-gpio/src/startup/: startup_stm32f4xx.s
lm35-cortex-m-gpio/tests/: test_gpio.c  test_lm35.c
